--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "firebase": "^12.4.0",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-big-calendar": "^1.19.4",
