--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^12.4.0",
+    "html2pdf.js": "^0.12.1",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-big-calendar": "^1.19.4",
