feat: recibo apos pagamento

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "SaaS Jurídico",
-  "short_name": "Jurídico",
+  "short_name": "Saas Jurídico",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#0f172a",
