fix: single-page funciona local, tentantiva de implementar no deploy

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "rewrites": [
     {
+      "source": "/api/:path*",
+      "destination": "https://backend-saas-juridico.vercel.app/api/:path*"
+    },
+    {
       "source": "/(manifest\\.json|icons/.*)",
       "destination": "/$1"
     },
