--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^12.4.0",
-    "html2pdf.js": "^0.12.1",
+    "html2pdf.js": "^0.14.0",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-big-calendar": "^1.19.4",
@@ -36,7 +36,8 @@
     "react-router-dom": "^7.8.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "textarea": "^0.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
